--- a/portfolio.html
+++ b/portfolio.html
@@ -265,7 +265,7 @@
 				</div>
 
 				<div class="join-thumb">
-					<h3 class="join-title">присоединяйтесь</h3>
+					<b class="join-title">присоединяйтесь</b>
 					<ul class="footer-soc list">
 						<li class="footer-item">
 							<a class="footer-link" href="" aria-label="instagram" target="_blank" rel="noopener noreferrer">
