--- a/index.html
+++ b/index.html
@@ -405,16 +405,15 @@
 
 				<div class="newsletter">
 					<b class="newsletter-title">Подпишитесь на рассылку</b>
-					<form name="sign to newsletter">
-						<ul class="newsletter-list list">
-							<li class="newsletter-item">
-								<label for="user_email">E-mail</label>
-								<input type="email" name="email" id="user_email" placeholder="E-mail" />
-							</li>
-							<li class="newsletter-item">
-								<button class="newsletter-btn" type="submit">Подписаться</button>
-							</li>
-						</ul>
+					<form class="newsletter-form" name="sign to newsletter">
+						<label for="user_email"></label>
+						<input type="email" name="email" id="user_email" placeholder="E-mail" />
+						<button class="newsletter-btn" type="submit">
+							Подписаться
+							<svg class="newsletter-btn-img" width="24" height="24">
+								<use href="./images/icon-img.svg#icon-send"></use>
+							</svg>
+						</button>
 					</form>
 				</div>
 			</div>
@@ -427,31 +426,51 @@
 						<use href="./images/icon-img.svg#icon-close-modal-img"></use>
 					</svg>
 				</button>
-				<b class="modal-title">Оставьте свои данные, мы вам перезвоним</b>
 				<form class="form">
-					<div class="form-decoration-line">
-						<label for="name">Имя</label>
-						<input type="text" name="name" id="name" autofocus />
-					</div>
-					<div class="form-decoration-line">
-						<label for="tel">Телефон</label>
-						<input type="tel" name="tel" id="tel" autofocus />
-					</div>
-					<div class="form-decoration-line">
-						<label for="email">Почта</label>
-						<input type="email" name="email" id="email" autofocus />
-					</div>
-					<div class="form-decoration-comment">
-						<label for="comment">Комментарий</label>
-						<textarea name="comment" id="comment" rows="10" placeholder="Введите текст" autofocus></textarea>
-					</div>
-					<div>
+					<b class="form-title">Оставьте свои данные, мы вам перезвоним</b>
+
+					<label class="form-decoration-line">
+						<span class="label-name">Имя</span>
+						<input class="input-decoration" type="text" name="name" id="name" autofocus />
+						<svg class="icon-imput-decoration" width="18" height="18">
+							<use href="./images/icon-img.svg#icon-person-black"></use>
+						</svg>
+					</label>
+
+					<label class="form-decoration-line">
+						<span class="label-name">Телефон</span>
+						<input class="input-decoration" type="tel" name="tel" id="tel" />
+						<svg class="icon-imput-decoration" width="18" height="18">
+							<use href="./images/icon-img.svg#icon-person-black"></use>
+						</svg>
+					</label>
+
+					<label class="form-decoration-line">
+						<span class="label-name">Почта</span>
+						<input class="input-decoration" type="email" name="email" id="email" />
+						<svg class="icon-imput-decoration" width="18" height="18">
+							<use href="./images/icon-img.svg#icon-person-black"></use>
+						</svg>
+					</label>
+
+					<label class="form-decoration-line textarea">
+						<span class="label-name">Комментарий</span>
+						<textarea
+							class="textarea-decoration"
+							name="comment"
+							id="comment"
+							rows="10"
+							placeholder="Введите текст"
+						></textarea>
+					</label>
+
+					<label class="form-decoration-policy">
 						<input type="checkbox" name="policy" id="policy" />
-						<label for="policy">
-							Соглашаюсь с рассылкой и принимаю
-							<a href="">Условия договора</a>
-						</label>
-					</div>
+						Соглашаюсь с рассылкой и принимаю&nbsp;
+						<a href="#">Условия договора</a>
+					</label>
+
+					<button class="form-btn" type="submit">Отправить</button>
 				</form>
 			</div>
 		</div>
