--- a/portfolio.html
+++ b/portfolio.html
@@ -297,6 +297,20 @@
 						</li>
 					</ul>
 				</div>
+
+				<div class="newsletter">
+					<b class="newsletter-title">Подпишитесь на рассылку</b>
+					<form class="newsletter-form" name="sign to newsletter">
+						<label for="user_email"></label>
+						<input type="email" name="email" id="user_email" placeholder="E-mail" />
+						<button class="newsletter-btn" type="submit">
+							Подписаться
+							<svg class="newsletter-btn-img" width="24" height="24">
+								<use href="./images/icon-img.svg#icon-send"></use>
+							</svg>
+						</button>
+					</form>
+				</div>
 			</div>
 		</footer>
 	</body>
