--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
 						<span class="label-name">Телефон</span>
 						<input class="input-decoration" type="tel" name="tel" id="tel" />
 						<svg class="icon-imput-decoration" width="18" height="18">
-							<use href="./images/icon-img.svg#icon-person-black"></use>
+							<use href="./images/icon-img.svg#icon-phone-black"></use>
 						</svg>
 					</label>
 
@@ -449,7 +449,7 @@
 						<span class="label-name">Почта</span>
 						<input class="input-decoration" type="email" name="email" id="email" />
 						<svg class="icon-imput-decoration" width="18" height="18">
-							<use href="./images/icon-img.svg#icon-person-black"></use>
+							<use href="./images/icon-img.svg#icon-email-modal"></use>
 						</svg>
 					</label>
 
@@ -465,9 +465,14 @@
 					</label>
 
 					<label class="form-decoration-policy">
-						<input type="checkbox" name="policy" id="policy" />
+						<input class="checkbox" type="checkbox" name="policy" id="policy" />
+						<span class="icon-checkbox"></span>
 						Соглашаюсь с рассылкой и принимаю&nbsp;
 						<a href="#">Условия договора</a>
+
+						<!-- <svg class="icon-checkbox" width="16" height="15">
+							<use href="./images/icon-img.svg#icon-check"></use>
+						</svg> -->
 					</label>
 
 					<button class="form-btn" type="submit">Отправить</button>
