--- a/portfolio.html
+++ b/portfolio.html
@@ -301,8 +301,10 @@
 				<div class="newsletter">
 					<b class="newsletter-title">Подпишитесь на рассылку</b>
 					<form class="newsletter-form" name="sign to newsletter">
-						<label for="user_email"></label>
-						<input type="email" name="email" id="user_email" placeholder="E-mail" />
+						<label class="newsletter-label">
+							<input class="newsletter-decoration" type="email" name="email" id="user_email" placeholder="E-mail" />
+						</label>
+
 						<button class="newsletter-btn" type="submit">
 							Подписаться
 							<svg class="newsletter-btn-img" width="24" height="24">
