--- a/index.html
+++ b/index.html
@@ -406,8 +406,10 @@
 				<div class="newsletter">
 					<b class="newsletter-title">Подпишитесь на рассылку</b>
 					<form class="newsletter-form" name="sign to newsletter">
-						<label for="user_email"></label>
-						<input type="email" name="email" id="user_email" placeholder="E-mail" />
+						<label class="newsletter-label">
+							<input class="newsletter-decoration" type="email" name="email" id="user_email" placeholder="E-mail" />
+						</label>
+
 						<button class="newsletter-btn" type="submit">
 							Подписаться
 							<svg class="newsletter-btn-img" width="24" height="24">
@@ -466,12 +468,16 @@
 
 					<label class="form-decoration-policy">
 						<input class="checkbox" type="checkbox" name="policy" id="policy" />
-						<span class="icon-checkbox"></span>
+						<span class="icon-checkbox">
+							<svg class="icon-checkbox-check" width="14" height="13">
+								<use href="./images/icon-img.svg#icon-Vector2"></use>
+							</svg>
+						</span>
 						Соглашаюсь с рассылкой и принимаю&nbsp;
 						<a href="#">Условия договора</a>
 
-						<!-- <svg class="icon-checkbox" width="16" height="15">
-							<use href="./images/icon-img.svg#icon-check"></use>
+						<!-- <svg class="icon-checkbox-check" width="13" height="12">
+							<use href="./images/icon-img.svg#icon-check-fill"></use>
 						</svg> -->
 					</label>
 
